[gd_scene load_steps=13 format=2]

[ext_resource path="res://clocks/4clock.png" type="Texture" id=1]
[ext_resource path="res://clocks/Clock.gd" type="Script" id=2]
[ext_resource path="res://clocks/lock-vector-icon.jpg" type="Texture" id=3]
[ext_resource path="res://clocks/6clock.png" type="Texture" id=4]
[ext_resource path="res://clocks/blue_6clock_0.png" type="Texture" id=5]
[ext_resource path="res://clocks/blue_4clock_0.png" type="Texture" id=6]
[ext_resource path="res://clocks/4clock 2.png" type="Texture" id=7]
[ext_resource path="res://clocks/8clock 2.png" type="Texture" id=8]
[ext_resource path="res://clocks/blue_12clock_0.png" type="Texture" id=9]
[ext_resource path="res://clocks/blue_8clock_0.png" type="Texture" id=10]
[ext_resource path="res://clocks/12clock.png" type="Texture" id=11]
[ext_resource path="res://clocks/EditWidgetContainer.gd" type="Script" id=12]

[node name="Clock" type="Control" groups=["clocks"]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -416.0
margin_bottom = -163.0
rect_min_size = Vector2( 600, 400 )
mouse_filter = 2
size_flags_horizontal = 7
size_flags_vertical = 7
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
FOUR_CLOCK_TEXTURE_UNDER = ExtResource( 6 )
FOUR_CLOCK_TEXTURE_OVER = ExtResource( 7 )
SIX_CLOCK_TEXTURE_UNDER = ExtResource( 5 )
SIX_CLOCK_TEXTURE_OVER = ExtResource( 4 )
EIGHT_CLOCK_TEXTURE_UNDER = ExtResource( 10 )
EIGHT_CLOCK_TEXTURE_OVER = ExtResource( 8 )
TWELVE_CLOCK_TEXTURE_UNDER = ExtResource( 9 )
TWELVE_CLOCK_TEXTURE_OVER = ExtResource( 11 )
segments = NodePath("CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer2/HBoxContainer2/segments")
filled_label = NodePath("CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer/HBoxContainer/FilledLabel")
clock_texture = NodePath("CenterContainer/HBoxContainer/ClockContainer/HBoxContainer/ClockTexture")
clock_line_edit = NodePath("CenterContainer/HBoxContainer/ClockContainer/ClockNameContainer/ClockName")
lock_texture = NodePath("CenterContainer/HBoxContainer/ClockContainer/HBoxContainer/ClockTexture/LockTexture")
locked_by_container = NodePath("CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer5/LockedByClockContainer")
locked_by_clock_label = NodePath("CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer5/LockedByClockContainer/UnlockedByClockLabel")
locking_clock_label = NodePath("CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer5/HBoxContainer2/LockingClockLabel")
clock_type_option = NodePath("CenterContainer/HBoxContainer/EditWidgetContainer/ClockTypeOption")
clock_name = "Default Clock Name"

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 594.0
margin_bottom = 413.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_right = 594.0
margin_bottom = 413.0
custom_constants/separation = 25

[node name="ClockContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_right = 350.0
margin_bottom = 413.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer/ClockContainer"]
margin_right = 350.0
margin_bottom = 350.0

[node name="ClockTexture" type="TextureProgress" parent="CenterContainer/HBoxContainer/ClockContainer/HBoxContainer"]
margin_right = 350.0
margin_bottom = 350.0
hint_tooltip = "Click to add one, right click to subtract one."
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 8.0
step = 0.05
value = 5.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 1 )
fill_mode = 4
tint_progress = Color( 0, 0, 0, 0.807843 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LockTexture" type="TextureRect" parent="CenterContainer/HBoxContainer/ClockContainer/HBoxContainer/ClockTexture"]
visible = false
self_modulate = Color( 1, 1, 1, 0.32549 )
margin_left = 49.0
margin_top = 56.0
margin_right = 303.0
margin_bottom = 291.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClockNameContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer/ClockContainer"]
margin_top = 354.0
margin_right = 350.0
margin_bottom = 385.0
alignment = 1

[node name="Spacer2" type="CheckBox" parent="CenterContainer/HBoxContainer/ClockContainer/ClockNameContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 24.0
margin_bottom = 31.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LockCheckBox2" type="CheckButton" parent="CenterContainer/HBoxContainer/ClockContainer/ClockNameContainer"]
visible = false
margin_right = 76.0
margin_bottom = 40.0

[node name="ClockName" type="LineEdit" parent="CenterContainer/HBoxContainer/ClockContainer/ClockNameContainer"]
margin_left = 28.0
margin_right = 325.0
margin_bottom = 31.0
size_flags_horizontal = 3
align = 1
secret_character = "?"
expand_to_text_length = true
clear_button_enabled = true
placeholder_text = "clock"
caret_blink = true
caret_blink_speed = 0.5

[node name="EditButton" type="Button" parent="CenterContainer/HBoxContainer/ClockContainer/ClockNameContainer"]
margin_left = 329.0
margin_right = 350.0
margin_bottom = 31.0
toggle_mode = true
pressed = true
text = "..."

[node name="EditWidgetContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 375.0
margin_right = 594.0
margin_bottom = 413.0
custom_constants/separation = 12
alignment = 1
script = ExtResource( 12 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer/EditWidgetContainer"]
margin_right = 219.0
margin_bottom = 52.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer"]
margin_right = 219.0
margin_bottom = 21.0

[node name="FilledLabel" type="Label" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer/HBoxContainer"]
margin_right = 9.0
margin_bottom = 21.0
text = "0"
align = 1

[node name="\'filled\'" type="Label" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer/HBoxContainer"]
margin_left = 13.0
margin_right = 49.0
margin_bottom = 21.0
text = "filled"
align = 1

[node name="FilledButtons" type="HBoxContainer" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 219.0
margin_bottom = 52.0

[node name="Minus" type="Button" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer/FilledButtons"]
margin_right = 19.0
margin_bottom = 27.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "-"

[node name="Plus" type="Button" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer/FilledButtons"]
margin_left = 23.0
margin_right = 44.0
margin_bottom = 27.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "+"

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/HBoxContainer/EditWidgetContainer"]
margin_top = 64.0
margin_right = 219.0
margin_bottom = 116.0

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer2"]
margin_right = 219.0
margin_bottom = 21.0

[node name="segments" type="Label" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer2/HBoxContainer2"]
margin_right = 8.0
margin_bottom = 21.0
text = "4"
align = 1

[node name="\'max\'" type="Label" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer2/HBoxContainer2"]
margin_left = 12.0
margin_right = 42.0
margin_bottom = 21.0
text = "max"
align = 1

[node name="SegementButtons" type="HBoxContainer" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer2"]
margin_top = 25.0
margin_right = 219.0
margin_bottom = 52.0
size_flags_vertical = 9

[node name="MinusSegment" type="Button" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer2/SegementButtons"]
margin_right = 19.0
margin_bottom = 27.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "-"

[node name="PlusSegment" type="Button" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer2/SegementButtons"]
margin_left = 23.0
margin_right = 44.0
margin_bottom = 27.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/HBoxContainer/EditWidgetContainer"]
margin_top = 128.0
margin_right = 219.0
margin_bottom = 168.0

[node name="CheckBox" type="CheckButton" parent="CenterContainer/HBoxContainer/EditWidgetContainer/HBoxContainer3"]
margin_right = 76.0
margin_bottom = 40.0
hint_tooltip = "Make Secret"
size_flags_horizontal = 9
size_flags_vertical = 4

[node name="\'secret\'" type="Label" parent="CenterContainer/HBoxContainer/EditWidgetContainer/HBoxContainer3"]
margin_left = 80.0
margin_top = 9.0
margin_right = 124.0
margin_bottom = 30.0
text = "Secret"

[node name="VBoxContainer5" type="VBoxContainer" parent="CenterContainer/HBoxContainer/EditWidgetContainer"]
margin_top = 180.0
margin_right = 219.0
margin_bottom = 296.0
custom_constants/separation = 11

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer5"]
margin_right = 219.0
margin_bottom = 40.0

[node name="LockCheckBox" type="CheckButton" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer5/HBoxContainer"]
margin_right = 76.0
margin_bottom = 40.0

[node name="\'locked\'" type="Label" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer5/HBoxContainer"]
margin_left = 80.0
margin_top = 9.0
margin_right = 130.0
margin_bottom = 30.0
text = "Locked"

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer5"]
margin_top = 51.0
margin_right = 219.0
margin_bottom = 78.0

[node name="LockingClockButton" type="Button" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer5/HBoxContainer2"]
margin_right = 116.0
margin_bottom = 27.0
text = "Locking Clock:"

[node name="LockingClockLabel" type="Label" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer5/HBoxContainer2"]
margin_left = 120.0
margin_top = 3.0
margin_right = 120.0
margin_bottom = 24.0

[node name="LockedByClockContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer5"]
margin_top = 89.0
margin_right = 219.0
margin_bottom = 116.0

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer5/LockedByClockContainer"]
margin_top = 3.0
margin_right = 71.0
margin_bottom = 24.0
text = "Locked by"

[node name="UnlockedByClockLabel" type="Label" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer5/LockedByClockContainer"]
margin_left = 75.0
margin_top = 3.0
margin_right = 114.0
margin_bottom = 24.0
text = "Clock"

[node name="DisconnectButton" type="Button" parent="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer5/LockedByClockContainer"]
margin_left = 118.0
margin_right = 219.0
margin_bottom = 27.0
text = "(Disconnect)"

[node name="ClockTypeOption" type="OptionButton" parent="CenterContainer/HBoxContainer/EditWidgetContainer"]
margin_top = 308.0
margin_right = 219.0
margin_bottom = 335.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteButton" type="Button" parent="CenterContainer/HBoxContainer/EditWidgetContainer"]
margin_top = 347.0
margin_right = 219.0
margin_bottom = 374.0
text = "Delete Clock"

[node name="ColorPickerButton" type="ColorPickerButton" parent="CenterContainer/HBoxContainer/EditWidgetContainer"]
margin_top = 386.0
margin_right = 219.0
margin_bottom = 413.0
text = "Fill Color"
color = Color( 0, 0, 0, 0.803922 )

[node name="Tween" type="Tween" parent="."]

[node name="ColorPicker" type="ColorPicker" parent="."]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 622.0
margin_bottom = 508.0

[connection signal="gui_input" from="CenterContainer/HBoxContainer/ClockContainer/HBoxContainer/ClockTexture" to="." method="_on_ClockTexture_gui_input"]
[connection signal="toggled" from="CenterContainer/HBoxContainer/ClockContainer/ClockNameContainer/Spacer2" to="." method="_on_CheckBox_toggled"]
[connection signal="toggled" from="CenterContainer/HBoxContainer/ClockContainer/ClockNameContainer/LockCheckBox2" to="." method="_on_LockCheckBox_toggled"]
[connection signal="text_changed" from="CenterContainer/HBoxContainer/ClockContainer/ClockNameContainer/ClockName" to="." method="_on_ClockName_text_changed"]
[connection signal="toggled" from="CenterContainer/HBoxContainer/ClockContainer/ClockNameContainer/EditButton" to="CenterContainer/HBoxContainer/EditWidgetContainer" method="_on_EditButton_toggled"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer/FilledButtons/Minus" to="." method="_on_Minus_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer/FilledButtons/Plus" to="." method="_on_Plus_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer2/SegementButtons/MinusSegment" to="." method="_on_MinusSegment_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer2/SegementButtons/PlusSegment" to="." method="_on_PlusSegment_pressed"]
[connection signal="toggled" from="CenterContainer/HBoxContainer/EditWidgetContainer/HBoxContainer3/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="toggled" from="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer5/HBoxContainer/LockCheckBox" to="." method="_on_LockCheckBox_toggled"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer5/HBoxContainer2/LockingClockButton" to="." method="_on_LockingClockButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/EditWidgetContainer/VBoxContainer5/LockedByClockContainer/DisconnectButton" to="." method="_on_DisconnectButton_pressed"]
[connection signal="item_selected" from="CenterContainer/HBoxContainer/EditWidgetContainer/ClockTypeOption" to="." method="_on_ClockTypeOption_item_selected"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/EditWidgetContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="color_changed" from="CenterContainer/HBoxContainer/EditWidgetContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
